add server client websocket communication test

--- a/src/Griffin.Framework/Griffin.Core.Tests/Griffin.Core.Tests.csproj
+++ b/src/Griffin.Framework/Griffin.Core.Tests/Griffin.Core.Tests.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Net\Protocols\Http\WebSocket\WebSocketFrameTests.cs" />
     <Compile Include="Net\Protocols\Http\WebSocket\WebSocketMessageEncoderTests.cs" />
     <Compile Include="Net\Protocols\Http\WebSocket\WebSocketMessageDecoderTests.cs" />
+    <Compile Include="Net\Protocols\Http\WebSocket\WebSocketServerClientTests.cs" />
     <Compile Include="Net\Protocols\MicroMsg\CodecTests.cs" />
     <Compile Include="Net\Protocols\MicroMsg\MicroMessageDecoderTests.cs" />
     <Compile Include="Net\Protocols\MicroMsg\MicroMessageEncoderTests.cs" />
